--- a/project.html
+++ b/project.html
@@ -1,107 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>프로젝트 상세 · Project.PAW</title>
-<meta name="description" content="프로젝트 상세 정보, 갤러리, 영수증, 그리고 직접 연결 안내를 확인하세요." />
-<link rel="icon" href="img/placeholder.svg" />
-
-  <link rel="stylesheet" href="css/app.css" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>프로젝트 상세 — Project.PAW</title>
+  <link rel="stylesheet" href="common.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-  <nav class="nav">
-    <div class="container">
-      <div class="brand"><a href="index.html">Project<span class="dot">.PAW</span></a></div>
-      <ul>
-        <li><a href="index.html">홈</a></li>
-        <li><a href="project_list.html">후원하기</a></li>
-        <li><a href="create.html" class="btn">후원 등록</a></li>
-      </ul>
+  <header style="background:white; border-bottom:1px solid #e5e7eb">
+    <div class="container-narrow" style="display:flex; align-items:center; justify-content:space-between; padding:14px 0">
+      <a class="navbar-brand" href="index.html"><strong>Project.PAW</strong></a>
+      <nav class="toolbar">
+        <a class="btn secondary" href="project_list.html">후원하기</a>
+        <a class="btn secondary" href="create.html">등록하기</a>
+      </nav>
     </div>
-  </nav>
-  <main class="container">
-  <section class="project-hero">
-    <img class="project-cover cover" alt="cover">
-    <h1 class="project-title"></h1>
-    <p class="project-summary"></p>
-    <p class="project-money"></p>
-    <div class="fixed-actions sticky-cta">
-      <a id="kakaoBtn" class="btn primary hidden" target="_blank" rel="noopener">카카오톡으로 연결</a>
-    </div>
-  </section>
+  </header>
 
-  <section class="project-gallery section">
-    <h2>상황 갤러리</h2>
-    <div class="slider">
-      <button class="btn-prev" aria-label="이전">‹</button>
-      <div class="slider-window"><div class="slider-track"></div></div>
-      <button class="btn-next" aria-label="다음">›</button>
-    </div>
-  </section>
-
-  <section class="section">
-    <h2>상세 내용</h2>
-    <div class="desc"></div>
-  </section>
-
-  <section class="section">
-    <h2>영수증</h2>
-    <div class="receipt-preview grid"></div>
-  </section>
-
-  <script type="module">
-    import "./js/firebase.js";
-    import { storage, fmt } from "./js/app.js";
-    const $ = (s, p=document) => p.querySelector(s);
-
-    const id = new URLSearchParams(location.search).get("id");
-    const p = await storage.byId(id);
-    if (!p) {
-      document.body.innerHTML = "<main class='container'><p>프로젝트를 찾을 수 없습니다.</p></main>";
-      throw new Error("Project not found");
-    }
-
-    $(".project-title").textContent = p.title || "";
-    $(".project-summary").textContent = p.summary || "";
-    $(".project-cover").src = p.images?.cover || "img/placeholder.svg";
-    $(".project-money").textContent = `목표 ${fmt(p.targetAmount)}원 · 구조자 ${fmt(p.selfPayAmount)}원`;
-    $(".desc").textContent = p.description || "";
-
-    const kakaoBtn = $("#kakaoBtn");
-    if (p.kakaoLink) {
-      kakaoBtn.href = p.kakaoLink;
-      kakaoBtn.classList.remove("hidden");
-    }
-
-    // Gallery slider
-    const g = Array.isArray(p.images?.gallery) ? p.images.gallery : [];
-    const track = document.querySelector(".slider-track");
-    if (g.length === 0) {
-      track.innerHTML = `<img src="${p.images?.cover || 'img/placeholder.svg'}" class="slide" alt="cover" />`;
-    } else {
-      track.innerHTML = g.map(src => `<img src="${src}" class="slide" alt="gallery" />`).join("");
-    }
-    let idx = 0;
-    const total = track.children.length;
-    const update = () => {
-      track.style.transform = `translateX(${-idx*100}%)`;
-    };
-    document.querySelector(".btn-prev").onclick = () => { idx = (idx-1+total)%total; update(); };
-    document.querySelector(".btn-next").onclick = () => { idx = (idx+1)%total; update(); };
-    update();
-
-    // Receipts grid
-    const r = Array.isArray(p.images?.receipts) ? p.images.receipts : [];
-    const rwrap = document.querySelector(".receipt-preview.grid");
-    rwrap.innerHTML = (r.length ? r : []).map(src => \`<div class="img-cell"><img src="\${src}" alt="receipt"></div>\`).join("");
-  </script>
-
+  <main class="container-narrow" style="padding:24px 0">
+    <div id="content"></div>
   </main>
-  <footer class="footer">
-    <div class="container">
-      <small>Project.PAW — “도움은 본능, 연결은 선택.” 100% 전달 · 책임 구조 · 직접 연결</small>
-    </div>
-  </footer>
+
+  <script src="paw.js"></script>
+  <script>
+    const root = document.querySelector('#content');
+    const p = loadProjectFromUrl();
+    if(!p){
+      root.innerHTML = '<div class="empty">프로젝트를 찾을 수 없습니다.</div>';
+    } else {
+      const pct = calcProgress(p);
+      const cover = (p.representativeImage && p.representativeImage.dataUrl) ? p.representativeImage.dataUrl : '';
+      const gal = (p.gallery||[]).map(g=>`<img src="${g.dataUrl}" alt="">`).join('');
+      const receipts = (p.receipts||[]).map(g=>`<img src="${g.dataUrl}" alt="">`).join('');
+      root.innerHTML = `
+        <article class="card">
+          <img src="${cover}" alt="" onerror="this.style.display='none'"/>
+          <div class="body">
+            <div class="toolbar" style="justify-content:space-between">
+              <span class="badge">진행중</span>
+              <small class="muted">${new Date(p.createdAt).toLocaleString('ko-KR')}</small>
+            </div>
+            <h2 style="margin:4px 0 2px">${p.name}</h2>
+            <small class="muted">by ${p.rescuerName}</small>
+            <div class="progress-wrap" style="margin-top:8px"><div class="progress" style="width:${pct}%"></div></div>
+            <small class="muted">목표 ${formatCurrency(p.goalAmount)} · 구조자 부담 ${formatCurrency(p.rescuerContribution)}</small>
+            <p style="margin-top:12px">${(p.summary||'')}</p>
+            <p>${(p.description||'').replaceAll('\n','<br/>')}</p>
+            <div class="kicker" style="margin-top:10px">상황 사진</div>
+            <div class="gallery">${gal || '<small class="muted">등록된 사진이 없습니다.</small>'}</div>
+            <div class="kicker" style="margin-top:12px">영수증</div>
+            <div class="gallery">${receipts || '<small class="muted">등록된 영수증이 없습니다.</small>'}</div>
+            <hr class="sep"/>
+            <div class="toolbar" style="gap:8px; flex-wrap:wrap">
+              <a class="btn" href="${p.kakaoInviteLink}" target="_blank" rel="noopener">카카오톡 연결</a>
+              <button class="btn secondary" onclick="copy(location.href)"><i class="bi bi-share"></i>&nbsp;공유</button>
+            </div>
+            <small class="muted" style="margin-top:8px; display:block">“책임의 끝과 공감의 시작이 만나는 곳.” — Project.PAW</small>
+          </div>
+        </article>
+      `;
+    }
+  </script>
 </body>
 </html>
