--- a/project_list.html
+++ b/project_list.html
@@ -5,13 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>후원하기 — Project.PAW</title>
 
-  <!-- 디자인은 기존 CSS를 그대로 사용하세요 -->
-  <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="css/list.css" />
+  <!-- 페이지 전용 스타일 (다른 페이지에 영향 없음) -->
+  <style>
+    :root{
+      --paw-primary:#1f6feb; --ink:#0b1220; --muted:#6b7280; --bg:#f7f9fc; --card:#fff;
+      --line:#e5e7eb; --radius:16px; --shadow:0 10px 24px rgba(16,24,40,.08);
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;background:var(--bg);color:#111827;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    a{text-decoration:none;color:inherit}
+    .container{max-width:1100px;margin:0 auto;padding:0 16px}
+    .topbar{position:sticky;top:0;z-index:10;background:#fff;border-bottom:1px solid var(--line)}
+    .topbar .inner{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+    .brand{font-weight:800;letter-spacing:.2px}
+    .nav{display:flex;gap:8px}
+    .btn{appearance:none;border:0;border-radius:12px;padding:10px 14px;font-weight:700;cursor:pointer}
+    .btn.ghost{background:#11182710}
+    .btn.primary{background:var(--paw-primary);color:#fff}
+    .section{padding:28px 0}
+    h1{margin:0 0 8px 0;font-size:clamp(20px,3vw,28px);font-weight:800}
+    .row{display:flex;gap:12px}
+    .between{justify-content:space-between}
+    .center{align-items:center}
+    .kicker{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted);font-weight:800}
+    .controls{gap:10px}
+    select,input[type="checkbox"]{padding:10px 12px;border:1px solid var(--line);border-radius:12px;background:#fff}
+    .list-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:16px}
+    .card{background:var(--card);border-radius:var(--radius);border:1px solid var(--line);box-shadow:var(--shadow);overflow:hidden;display:flex;flex-direction:column;transition:transform .12s ease}
+    .card:hover{transform:translateY(-2px)}
+    .thumb{width:100%;height:180px;object-fit:cover;background:#eef2ff}
+    .info{padding:14px 14px 16px}
+    .title{margin:0;font-size:18px}
+    .summary{margin:6px 0 10px 0;color:#374151;line-height:1.4}
+    .muted{color:#6b7280}
+    .badge{font-size:12px;padding:4px 8px;border-radius:999px}
+    .badge.approved{background:#eafff2;color:#0a6b3c}
+    .badge.pending{background:#fff6e6;color:#a15a00}
+    .progress{width:100%;height:8px;background:#f3f4f6;border-radius:999px;overflow:hidden;margin-top:10px;margin-bottom:6px}
+    .progress i{display:block;height:100%;background:var(--paw-primary);width:0%}
+    .skeleton{position:relative;min-height:260px;background:linear-gradient(90deg,#f4f6fb 25%,#eef2f7 37%,#f4f6fb 63%);background-size:400% 100%;animation:shimmer 1.4s infinite}
+    @keyframes shimmer{0%{background-position:100% 0}100%{background-position:-100% 0}}
+    .empty{padding:36px;text-align:center;border:1px dashed #cbd5e1;border-radius:16px;background:#fff;color:#64748b}
+    footer{padding:40px 0;color:#94a3b8;font-size:14px}
+  </style>
 </head>
 <body>
   <header class="topbar">
-    <div class="container">
+    <div class="container inner">
       <a class="brand" href="index.html">Project.PAW</a>
       <nav class="nav">
         <a href="index.html" class="btn ghost">홈</a>
@@ -23,13 +63,15 @@
   <main class="container">
     <section class="section">
       <div class="row between center">
-        <h1 class="section-title">모든 프로젝트</h1>
-        <div class="controls row gap-12">
-          <label class="row gap-6 center">
-            <input id="onlyApproved" type="checkbox" />
-            승인만 보기
+        <div>
+          <div class="kicker">Explore</div>
+          <h1>모든 프로젝트</h1>
+        </div>
+        <div class="row center controls">
+          <label class="row center" style="gap:6px">
+            <input id="onlyApproved" type="checkbox" /> 승인만 보기
           </label>
-          <select id="sort">
+          <select id="sort" title="정렬 방식">
             <option value="latest">최신순</option>
             <option value="progress">달성률순</option>
             <option value="goal">목표금액 높은순</option>
@@ -37,17 +79,17 @@
         </div>
       </div>
 
-      <div id="list" class="grid list-grid" style="margin-top: 16px;"></div>
+      <div id="list" class="list-grid" style="margin-top:16px"></div>
     </section>
   </main>
 
-  <footer class="container muted" style="padding:40px 0;">
-    © Project.PAW
+  <footer class="container">
+    <span class="muted">© Project.PAW</span>
   </footer>
 
-  <!-- ✅ 백엔드/스토리지 모듈 -->
+  <!-- 기능 스크립트 -->
   <script type="module">
-    import "./js/firebase.js";                          // Firebase 초기화 (익명 로그인은 firebase.js에서 처리)
+    import "./js/firebase.js";
     import { storage, fmt } from "./js/app.js";
     import { percent, esc } from "./js/utils.js";
 
@@ -57,60 +99,50 @@
 
     const skeletons = () => {
       wrap.innerHTML = Array.from({ length: 6 })
-        .map(() => `<a class="card row skeleton" href="javascript:void(0)"></a>`).join("");
+        .map(() => `<a class="card skeleton" href="javascript:void(0)"></a>`).join("");
     };
 
-    async function render() {
+    function createdAtSeconds(x){
+      // Firestore serverTimestamp() 객체 -> seconds 읽기
+      return (x && typeof x === 'object' && 'seconds' in x) ? x.seconds : 0;
+    }
+
+    async function render(){
       skeletons();
+      let items = await storage.getAll(); // Firestore에서 로드
 
-      let items = await storage.getAll();  // 🔥 Firestore에서 직접 로드
-
-      // 승인만 보기
-      if (onlyApproved?.checked) {
+      if(onlyApproved?.checked){
         items = items.filter(p => (p.status || "pending") === "approved");
       }
 
-      // 정렬
       const mode = sortSel?.value || "latest";
-      if (mode === "latest") {
-        // serverTimestamp는 클라이언트에서 숫자가 아니므로, createdAt?.seconds 기준 정렬
-        items.sort((a, b) => {
-          const ax = a.createdAt?.seconds || 0;
-          const bx = b.createdAt?.seconds || 0;
-          return bx - ax;
-        });
-      } else if (mode === "progress") {
-        items.sort((a, b) => {
-          const pa = percent(a.raisedAmount || 0, a.targetAmount || 0);
-          const pb = percent(b.raisedAmount || 0, b.targetAmount || 0);
-          return pb - pa;
-        });
-      } else if (mode === "goal") {
-        items.sort((a, b) => Number(b.targetAmount || 0) - Number(a.targetAmount || 0));
+      if(mode === "latest"){
+        items.sort((a,b)=> createdAtSeconds(b.createdAt) - createdAtSeconds(a.createdAt));
+      }else if(mode === "progress"){
+        items.sort((a,b)=> percent(b.raisedAmount||0,b.targetAmount||0) - percent(a.raisedAmount||0,a.targetAmount||0));
+      }else if(mode === "goal"){
+        items.sort((a,b)=> Number(b.targetAmount||0) - Number(a.targetAmount||0));
       }
 
-      // 렌더
-      wrap.innerHTML = (items.length ? items : []).map(p => {
+      wrap.innerHTML = items.map(p=>{
         const badge = (p.status === "approved")
           ? '<span class="badge approved">승인</span>'
           : '<span class="badge pending">대기</span>';
 
-        const pct = percent(p.raisedAmount || 0, p.targetAmount || 1);
+        const pct = Math.max(0, Math.min(100, percent(p.raisedAmount||0, p.targetAmount||1)));
         const cover = (p.images && p.images.cover) ? p.images.cover : "img/placeholder.svg";
 
         return `
-          <a class="card row" href="project.html?id=${encodeURIComponent(p.id)}" aria-label="프로젝트 ${esc(p.title || '')} 상세 보기">
+          <a class="card" href="project.html?id=${encodeURIComponent(p.id)}" aria-label="프로젝트 ${esc(p.title||'')} 상세 보기">
             <img class="thumb" src="${cover}" alt="대표 이미지" />
             <div class="info">
-              <div class="row between center">
+              <div class="row between center" style="gap:8px">
                 <h3 class="title">${esc(p.title || '')}</h3>
                 ${badge}
               </div>
               <p class="summary">${esc(p.summary || '')}</p>
-              <div class="progress">
-                <i style="width:${pct}%"></i>
-              </div>
-              <div class="row gap-12 muted">
+              <div class="progress"><i style="width:${pct}%"></i></div>
+              <div class="row muted" style="gap:12px;">
                 <span>목표 ${fmt(p.targetAmount)}원</span>
                 <span>구조자 ${fmt(p.selfPayAmount)}원</span>
               </div>
@@ -119,14 +151,13 @@
         `;
       }).join("");
 
-      if (!items.length) {
+      if(!items.length){
         wrap.innerHTML = `<div class="empty">표시할 프로젝트가 없습니다.</div>`;
       }
     }
 
     sortSel?.addEventListener("change", render);
     onlyApproved?.addEventListener("change", render);
-
     render();
   </script>
 </body>
